--- a/templates/base.html
+++ b/templates/base.html
@@ -60,19 +60,26 @@
             <div class="col-12 col-md-5 col-lg-5 my-auto py-1 py-lg-0">
 
               <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                <li class="list-inline-item">
-                    {% if request.user.is_authenticated %} 
-                        <a class="text-center text-black nav-link" href="{% url 'profile'}">
-                          <i class="fas fa-user fa-lg"></i>
-                          <p>My Account</p>
-                        </a>
-                    {% else %}
-                      <a class="text-black nav-link" href="{% url 'account_signup' %}">
-                        <i class="fas fa-user fa-lg text-center"></i>
-                        <p>Signup/Login</p>
-                      </a>
-                    {% endif %}
-                </li>
+                <li class="list-inline-item dropdown">
+                  <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="text-center">
+                          <div><i class="fas fa-user fa-lg"></i></div>
+                          <p class="my-0">My Account</p>
+                      </div>
+                  </a>
+                  <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                      {% if request.user.is_authenticated %}
+                          {% if request.user.is_superuser %}
+                              <a href="#" class="dropdown-item">Product Management</a>
+                          {% endif %}
+                          <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                          <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                      {% else %}
+                          <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                          <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                      {% endif %}
+                  </div>
+              </li>
                 <li class="list-inline-item">
                     <a class="text-black nav-link text-center">
                             <i class="fas fa-heart fa-lg"></i>
@@ -85,14 +92,6 @@
                             <p>Bag</p>
                     </a>
                 </li>
-                {% if request.user.is_authenticated %}
-                <li class="list-inline-item">
-                  <a class="text-black nav-link text-center" href="#">
-                    <i class="fas fa-sign-out-alt fa-lg"></i>
-                    <p>Logout</p>
-                  </a>
-                </li>
-                {% endif %}
               </ul>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
