--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -181,11 +181,23 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Have a good day!</h2>
-                <hr>
-            </div>
-        </div>
+			<div class="col-12 col-lg-7 text-right">
+                {% if from_profile %}
+                    <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-angle-left"></i>
+                        </span>
+                        <span class="text-uppercase">Back to Profile</span>
+                    </a>
+                {% else %}
+                    <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-gifts"></i>
+                        </span>
+                        <span class="text-uppercase">Have a look at our different photo shoots</span>
+                    </a>
+                {% endif %}
+			</div>
+		</div>
     </div>
 {% endblock %}
